# edgebot-ai

./: Cargo.toml  README.md  TASKS.md
.github/workflows/: ci.yml  dashboard.yml  deploy-production.yml  deploy-staging.yml  docs.yml  test.yml
docs/book/: index.md  pro-workflow.md  reference.md  ros2-integration.md  wasm-deployment.md
edgebot-cli/: Cargo.toml
edgebot-cli/src/: compile.rs  deploy.rs  lib.rs  main.rs  optimize.rs  simulate.rs
edgebot-core/: Cargo.toml
edgebot-core/benches/: inference_bench.rs
edgebot-core/src/: lib.rs  optimizer.rs
edgebot-core/src/inference/: mod.rs
edgebot-core/src/memory/: buffer.rs  camera.rs  lidar.rs  mod.rs  ros2.rs  tensor.rs
edgebot-core/src/task/: mod.rs
edgebot-dashboard/: Cargo.toml  build-dashboard-wasm.sh  index.html  trunk.toml
edgebot-dashboard/public/: index.html  styles.css
edgebot-dashboard/src/: entrypoint.rs  lib.rs  main.rs
edgebot-dashboard/src/app/: mod.rs
edgebot-dashboard/src/components/: card.rs  error.rs  loading.rs  mod.rs
edgebot-dashboard/src/pages/: dashboard.rs  license.rs  metrics.rs  mod.rs  simulations.rs
edgebot-dashboard/src/services/: mod.rs
edgebot-dashboard/static/: styles.css
edgebot-dashboard/tests/: dashboard.rs
edgebot-licensing/: Cargo.toml
edgebot-licensing/src/: lib.rs
edgebot-ros2/: Cargo.toml
edgebot-ros2/src/: bridge.rs  lib.rs
edgebot-sim/: Cargo.toml
edgebot-sim-server/: .dockerignore  Cargo.toml  Dockerfile
edgebot-sim-server/src/: errors.rs  main.rs
edgebot-sim/src/: lib.rs  webots.rs
edgebot-wasm/: Cargo.toml  build-wasm.sh
edgebot-wasm/src/: lib.rs  runtime.rs
logs/: iteration-1.md  iteration-10.md  iteration-11.md  iteration-12.md  iteration-13.md  iteration-14.md  iteration-15.md  iteration-16.md  iteration-17.md  iteration-18.md  iteration-19.md  iteration-2.md  iteration-20.md  iteration-21.md  iteration-22.md  iteration-23.md  iteration-24.md  iteration-25.md  iteration-26.md  iteration-27.md  iteration-28.md  iteration-29.md  iteration-3.md  iteration-30.md  iteration-31.md  iteration-32.md  iteration-33.md  iteration-34.md  iteration-35.md  iteration-36.md  iteration-37.md  iteration-38.md  iteration-39.md  iteration-4.md  iteration-40.md  iteration-41.md  iteration-42.md  iteration-43.md  iteration-44.md  iteration-45.md  (+21 more)
