[package]
name = "edgebot-core"
version = "0.1.0"
edition = "2021"
description = "Core inference engine for EdgeBot AI using Burn framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/edgebot-ai/edgebot-ai"
keywords = ["ai", "robotics", "edge-computing", "wasm", "inference"]
categories = ["science", "embedded", "wasm"]

[dependencies]
burn = { version = "0.12", features = ["std", "autocast"] }
burn-import = "0.12"
burn-tch = { version = "0.12", features = ["download-libtorch"] }
ndarray = "0.15"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
rclrs = "0.3"
sensor_msgs = "0.3"
vision_msgs = "0.3"
std_msgs = "0.3"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
serde_json = "1.0"

[[bench]]
name = "inference_bench"
harness = false

[[bin]]
name = "edgebot-optimize"
path = "src/bin/edgebot-optimize.rs"
