[package]
name = "edgebot-core"
version = "0.1.0"
edition = "2021"
description = "Core inference engine for EdgeBot AI using Burn framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/edgebot-ai/edgebot-ai"
keywords = ["ai", "robotics", "edge-computing", "wasm", "inference"]
categories = ["science", "embedded", "wasm"]

[dependencies]
burn = { version = "0.13.0", features = ["std"] }
burn-import = "0.13"
burn-tch = "0.13"
bincode = { version = "2", features = ["serde"] }
ndarray = "0.15"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rclrs = "0.3"
# ROS2 message bindings - using community crates that are actually available
# For standard ROS2 messages, we use type-safe wrappers instead of direct bindings
# These can be replaced with actual ros2 message packages when/if they become available in Rust ecosystem

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
serde_json = "1.0"

[[bench]]
name = "inference_bench"
harness = false

[[bin]]
name = "edgebot-optimize"
path = "src/bin/edgebot-optimize.rs"
