[package]
name = "edgebot-dashboard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6"
gloo-utils = "0.1"
web-sys = { version = "0.3", features = ["Window", "Location", "Blob", "Uint8Array", "FormData"] }
edgebot-licensing = { path = "../edgebot-licensing" }
time = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
trunk = "0.17"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
