[package]
name = "edgebot-sim-server"
version = "0.1.0"
edition = "2021"
description = "Cloud simulation service for EdgeBot AI using Actix Web"
license = "MIT OR Apache-2.0"
repository = "https://github.com/edgebot-ai/edgebot-ai"
keywords = ["simulation", "cloud", "web", "actix-web", "robotics"]
categories = ["science", "embedded", "web-programming"]

[dependencies]
actix-web = "4.4"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-actix-web = "4.0"
uuid = { version = "1.4", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }

# EdgeBot dependencies
edgebot-sim = { path = "../edgebot-sim" }
edgebot-core = { path = "../edgebot-core" }